--- a/app/src/main/res/layout/message_items.xml
+++ b/app/src/main/res/layout/message_items.xml
@@ -3,6 +3,12 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
+
+
+    <android.support.v4.widget.Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
+
     <LinearLayout
         android:id="@+id/ly_mesaage_left"
         android:orientation="horizontal"
@@ -12,7 +18,8 @@
         >
         <TextView
             android:id="@+id/tv_message_left"
-
+            android:background="@drawable/message_item_background"
+            android:gravity="center|left"
             android:layout_weight="4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -24,9 +31,6 @@
 
     </LinearLayout>
 
-    <android.support.v4.widget.Space
-        android:layout_width="match_parent"
-        android:layout_height="10dp"/>
     <LinearLayout
         android:id="@+id/ly_mesaage_right"
         android:orientation="horizontal"
@@ -38,8 +42,8 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tv_message_right"
-            android:gravity="right"
-
+            android:gravity="right|center"
+            android:background="@drawable/message_item_background"
             android:layout_weight="4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"/>
