--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,18 @@
     <Button
         android:layout_below="@+id/tab_home"
         android:id="@+id/knife_test1"
-        android:text="Test1"
+        android:text="Post"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_resp"
+        android:layout_below="@+id/knife_test1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <Button
+        android:visibility="gone"
         android:layout_below="@+id/knife_test1"
         android:id="@+id/knife_test2"
         android:text="Test1"
@@ -24,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <Button
+        android:visibility="gone"
         android:layout_below="@+id/knife_test2"
         android:id="@+id/knife_test3"
         android:gravity="center"
