--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -21,6 +21,7 @@
         />-->
     <Button
         android:id="@+id/bt_post"
+        android:visibility="gone"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:text="post"
