--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.leilei.guoshujinfu.mylearning.activity.MainActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
     <LinearLayout
+        android:id="@+id/ly_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+
         <FrameLayout
+            android:id="@+id/fl_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             />
-
+        <!--
+        <view
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="#FFE5E5E5"/>-->
         <RadioGroup
             android:id="@+id/rg_main_tab"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#FFFFFFFF"
             android:orientation="horizontal">
-
             <RadioButton
-                android:id="@+id/rbtn_tab_home"
+                android:id="@+id/rb_tab_home"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -39,9 +42,8 @@
                 android:text="首页"
                 android:textColor="@color/main_selector_tab_text"
                 android:textSize="12dp"/>
-
             <RadioButton
-                android:id="@+id/rbtn_tab_credit_card"
+                android:id="@+id/rb_tab_chat"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -54,9 +56,8 @@
                 android:text="聊天"
                 android:textColor="@color/main_selector_tab_text"
                 android:textSize="12dp"/>
-
             <RadioButton
-                android:id="@+id/rbtn_tab_profile"
+                android:id="@+id/rb_tab_img"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -70,12 +71,6 @@
                 android:textColor="@color/main_selector_tab_text"
                 android:textSize="12dp"/>
         </RadioGroup>
-
-        <view
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="#FFE5E5E5"/>
 
     </LinearLayout>
 
