--- a/app/src/main/res/color/main_selector_tab_text.xml
+++ b/app/src/main/res/color/main_selector_tab_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#10ab41" android:state_checked="true"/>
-    <item android:color="#ff999999" android:state_checked="false"/>
+    <item android:color="#ff10ab41" android:state_checked="true"/>
+    <item android:color="#ff333333" android:state_checked="false"/>
 </selector>
