--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,29 +8,22 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-
         <FrameLayout
             android:id="@+id/fl_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             />
-        <!--
-        <view
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="#FFE5E5E5"/>-->
         <RadioGroup
             android:id="@+id/rg_main_tab"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:background="#FFFFFFFF"
             android:orientation="horizontal">
             <RadioButton
                 android:id="@+id/rb_tab_home"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
                 android:button="@null"
@@ -45,7 +38,7 @@
             <RadioButton
                 android:id="@+id/rb_tab_chat"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
                 android:button="@null"
@@ -59,7 +52,7 @@
             <RadioButton
                 android:id="@+id/rb_tab_img"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
                 android:button="@null"
