--- a/appinkotlin/src/main/res/layout/activity_main.xml
+++ b/appinkotlin/src/main/res/layout/activity_main.xml
@@ -9,11 +9,11 @@
 
     <TextView
         android:id="@+id/tv_spannable_test"
-        android:textSize="16dp"
+        android:textSize="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintDimensionRatio="0.5"
+        android:gravity="center"
+        tools:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
