--- a/appmy/src/main/res/layout/layout_drawer_test.xml
+++ b/appmy/src/main/res/layout/layout_drawer_test.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     tools:openDrawer="left">
 
@@ -12,8 +13,19 @@
         android:layout_height="match_parent"
         android:text="Hello World!"
         android:textSize="20dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        />
+
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        app:headerLayout="@layout/activity_chat"
+        app:menu="@menu/activity_main_drawer"
+
+        />
     <TextView
+        android:visibility="gone"
         android:background="#ac9dda"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
