--- a/appmy/src/main/res/layout/activity_test.xml
+++ b/appmy/src/main/res/layout/activity_test.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_test"
         android:text="果树金福"
         android:layout_gravity="center"
@@ -20,5 +21,15 @@
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/iv_view_anim"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="#8561a18c"/>
+    <ImageView
+        android:id="@+id/iv_pro_anim"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:background="#4195a6"/>
 
-</FrameLayout>
+</LinearLayout>
