--- a/appmy/src/main/res/layout/activity_test.xml
+++ b/appmy/src/main/res/layout/activity_test.xml
@@ -1,35 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <TextView
-        android:visibility="gone"
         android:id="@+id/tv_test"
-        android:text="果树金福"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/text_test_select"
-        android:enabled="true"
-        android:background="@drawable/tv_shape"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/tv_shape"
+        android:enabled="true"
+        android:gravity="center"
+        android:paddingBottom="20dp"
         android:paddingLeft="100dp"
         android:paddingRight="100dp"
         android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:layout_height="wrap_content"/>
+        android:text="果树金福"
+        android:textColor="@color/text_test_select"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="gone" />
+
     <ImageView
         android:id="@+id/iv_view_anim"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:background="#8561a18c"/>
+        android:background="#8561a18c" />
+
     <ImageView
         android:id="@+id/iv_pro_anim"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:background="#4195a6"/>
+        android:background="#4195a6" />
+    <!--可在布局文件里设置
+    1.是否显示滚动条
+    2.通过addHeaderView()或addFootView()添加的item是否显示divider
+    3.下拉顶部阴影效果
+    4.。。。
+     -->
+    <ListView
+        android:id="@+id/lv_list_test"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 </LinearLayout>
