--- a/appmy/src/main/res/layout/activity_picture.xml
+++ b/appmy/src/main/res/layout/activity_picture.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_impage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:overScrollMode="never"/>
-        />
+        android:overScrollMode="never" />
+    />
 
     <!--<com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/sdv_picture"
@@ -21,13 +21,12 @@
         />-->
     <Button
         android:id="@+id/bt_post"
-        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:text="post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+        android:visibility="gone" />
 
 
 </RelativeLayout>
