--- a/appmy/src/main/res/layout/layout_constraint_test.xml
+++ b/appmy/src/main/res/layout/layout_constraint_test.xml
@@ -1,59 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="textCenter"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="textCenter" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="textLeft"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_center"
         app:layout_constraintRight_toLeftOf="@+id/tv_center"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_center"/>
+        tools:text="textLeft" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="textRight"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_center"
         app:layout_constraintLeft_toRightOf="@+id/tv_center"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_center"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="textLeft"
-        app:layout_constraintBottom_toTopOf="@+id/tv_center"
-        app:layout_constraintRight_toRightOf="@+id/tv_center"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_center"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="textLeft"
-        app:layout_constraintTop_toBottomOf="@+id/tv_center"
-        app:layout_constraintRight_toRightOf="@+id/tv_center"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_center"/>
+        tools:text="textRight" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="3:1"
-        android:text="TextView"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.24"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/tv_center"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_center"
+        app:layout_constraintRight_toRightOf="@+id/tv_center"
+        tools:text="textLeft" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_center"
+        app:layout_constraintRight_toRightOf="@+id/tv_center"
+        app:layout_constraintTop_toBottomOf="@+id/tv_center"
+        tools:text="textLeft" />
+
 
 </android.support.constraint.ConstraintLayout>
