--- a/appmy/src/main/res/layout/layout_drawer_test.xml
+++ b/appmy/src/main/res/layout/layout_drawer_test.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     tools:openDrawer="left">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello World!"
-        android:textSize="20dp"
         android:gravity="center"
-        />
+        android:text="Hello World!"
+        android:textSize="20dp" />
 
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
@@ -24,14 +22,15 @@
         app:menu="@menu/activity_main_drawer"
 
         />
+
     <TextView
-        android:visibility="gone"
-        android:background="#ac9dda"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:text="drawer"
+        android:background="#ac9dda"
         android:gravity="center_vertical"
-        android:textSize="75dp"/>
+        android:text="drawer"
+        android:textSize="75dp"
+        android:visibility="gone" />
 
 </android.support.v4.widget.DrawerLayout>
