--- a/appmy/src/main/res/layout/picture_from_url.xml
+++ b/appmy/src/main/res/layout/picture_from_url.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             xmlns:fresco="http://schemas.android.com/apk/res-auto">
-    <com.facebook.drawee.view.SimpleDraweeView
-    android:id="@+id/sdv_picture"
-    android:layout_above="@+id/bt_post"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    fresco:actualImageScaleType="center"
-   />
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/sdv_picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bt_post"
+        fresco:actualImageScaleType="center" />
 
 </FrameLayout>
