--- a/appinkotlin/src/main/res/layout/activity_main.xml
+++ b/appinkotlin/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context="com.guoshujinfu.aqrlei.ui.MainActivity">
 
     <TextView
+        android:drawableTop="@drawable/level_list"
         android:id="@+id/tv_spannable_test"
         android:textSize="25dp"
         android:layout_width="wrap_content"
@@ -18,6 +19,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+        android:id="@+id/iv_anim_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/anim_drawable_test"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_spannable_test"
+        app:layout_constraintRight_toRightOf="@+id/tv_spannable_test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
 
 
 </android.support.constraint.ConstraintLayout>
