--- a/truckrental/src/main/res/layout/activity_main.xml
+++ b/truckrental/src/main/res/layout/activity_main.xml
@@ -4,16 +4,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.aqrlei.graduation.truckrental.baselib.base.BaseActivity">
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_spannable_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:drawableTop="@drawable/level_list"
+        android:gravity="center"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Hello World!"/>
+
+    <ImageView
+        android:id="@+id/iv_anim_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/anim_drawable_test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_spannable_test"
+        app:layout_constraintRight_toRightOf="@+id/tv_spannable_test"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
