--- a/appmvpkotlin/src/main/res/layout/activity_animation.xml
+++ b/appmvpkotlin/src/main/res/layout/activity_animation.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rg_anim_tab"
         android:layout_width="match_parent"
         android:background="#FFFFFF"
-        android:layout_height="60dp"
+        android:layout_height="30dp"
         android:orientation="horizontal">
         <RadioButton
             android:id="@+id/rb_tab_home"
@@ -19,7 +19,7 @@
             android:button="@null"
             android:checked="true"
             android:drawablePadding="4dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:paddingTop="5dp"
             android:text="首页"
             android:textColor="@color/main_selector_tab_text"
@@ -33,7 +33,7 @@
             android:background="@null"
             android:button="@null"
             android:drawablePadding="4dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:paddingTop="5dp"
             android:text="动画"
             android:textColor="@color/main_selector_tab_text"
@@ -46,7 +46,7 @@
             android:background="@null"
             android:button="@null"
             android:drawablePadding="4dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:paddingTop="5dp"
             android:text="聊天"
             android:textColor="@color/main_selector_tab_text"
