--- a/appmvpkotlin/src/main/res/values/styles.xml
+++ b/appmvpkotlin/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="TabTextAppearance">
+        <item name="android:textSize">14dp</item>
+    </style>
 
 </resources>
