--- a/yueting/src/main/res/yueting/common/layout/listheader_home.xml
+++ b/yueting/src/main/res/yueting/common/layout/listheader_home.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
 
     <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/sdv_list_header"
+        android:id="@+id/sdv_list_header_home"
         android:layout_width="match_parent"
         android:layout_height="150dp"/>
 
