--- a/yueting/src/main/res/yueting/read/layout/yueting_fragment_read.xml
+++ b/yueting/src/main/res/yueting/read/layout/yueting_fragment_read.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:layout_height="match_parent">
     <com.aqrlei.graduation.yueting.baselib.util.view.AlphaListView
-        android:id="@+id/lv_fragment_home"
+        android:id="@+id/lv_fragment_read"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never"/>
+        android:overScrollMode="never"
+        android:scrollbars="none"/>
 
 </LinearLayout>
