--- a/yueting/src/main/res/yueting/music/layout/yueting_fragment_music.xml
+++ b/yueting/src/main/res/yueting/music/layout/yueting_fragment_music.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <com.aqrlei.graduation.yueting.baselib.util.view.AlphaExpandListView
+
+    <com.aqrairsigns.aqrleilib.view.AlphaExpandListView
         android:id="@+id/elv_fragment_music"
         android:overScrollMode="never"
         android:scrollbars="none"
