--- a/yueting/src/main/res/yueting/read/layout/yueting_fragment_read.xml
+++ b/yueting/src/main/res/yueting/read/layout/yueting_fragment_read.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <com.aqrlei.graduation.yueting.baselib.util.view.AlphaListView
+
+    <com.aqrairsigns.aqrleilib.view.AlphaListView
         android:id="@+id/lv_fragment_read"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
