--- a/appmy/src/main/res/layout/activity_test_two.xml
+++ b/appmy/src/main/res/layout/activity_test_two.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:tools="http://schemas.android.com/tools"
               xmlns:appmy="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical">
 
@@ -16,6 +15,14 @@
         appmy:progress="100"
         appmy:max="250"
         appmy:capStyle="0"
+        android:visibility="gone"
       />
+    <com.leilei.guoshujinfu.mylearning.util.view.LearnView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        appmy:learnType="2"
+        appmy:learnHeight="480"
+        appmy:learnWidth="320"
+        appmy:learnTimes="10"/>
 
 </LinearLayout>
