--- a/aqrleilib/src/main/res/values/attrs.xml
+++ b/aqrleilib/src/main/res/values/attrs.xml
@@ -6,6 +6,7 @@
         <attr name="startDegree" format="integer"/>
         <attr name="sweepDegree" format="integer"/>
         <attr name="rotateDegree" format="integer"/>
+        <attr name="animationVelocity" format="integer"/>
 
         <attr name="radius" format="dimension"/>
         <attr name="roundWidth" format="dimension"/>
