--- a/appmy/src/main/res/values/attrs.xml
+++ b/appmy/src/main/res/values/attrs.xml
@@ -24,6 +24,8 @@
         <attr name="learnStartX" format="float"/>
         <attr name="learnStartY" format="float"/>
         <attr name="learnLength" format="float"/>
+        <attr name="learnSkewRatio" format="float" />
+        <attr name="learnSkewType" format="integer" />
 
 
     </declare-styleable>
