--- a/yueting/src/main/res/layout/activity_picture.xml
+++ b/yueting/src/main/res/layout/activity_picture.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:fresco="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    xmlns:yueting="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_impage"
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bt_post"
-        android:visibility="visible"/>
+        android:visibility="gone" />
 
     <ExpandableListView
         android:id="@+id/elv_test"
@@ -41,6 +41,15 @@
         android:layout_centerInParent="true"
         android:text="post"
         android:visibility="visible"/>
+
+    <com.aqrairsigns.aqrleilib.view.RoundBar
+        android:id="@+id/rb_test_ratio"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        yueting:openAnimation="true"
+        yueting:useGradientGolor="true"
+        yueting:animationVelocity="3"
+        yueting:capStyle="round" />
 
 
 </RelativeLayout>
