--- a/appmy/src/main/res/layout/activity_test_two.xml
+++ b/appmy/src/main/res/layout/activity_test_two.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:appmy="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:appmy="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical">
 
     <com.leilei.guoshujinfu.mylearning.util.view.SemiRoundBar
@@ -10,21 +10,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        appmy:sweepDegree="360"
-        appmy:startDegree="150"
-        appmy:radius="100dp"
-        appmy:progress="100"
-        appmy:max="250"
         appmy:capStyle="0"
-      />
+        appmy:max="250"
+        appmy:progress="100"
+        appmy:radius="100dp"
+        appmy:startDegree="150"
+        appmy:sweepDegree="360"
+        />
+
     <com.leilei.guoshujinfu.mylearning.util.view.LearnView
-        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        appmy:learnType="2"
+        android:visibility="gone"
         appmy:learnHeight="480"
         appmy:learnSkewType="0"
-        appmy:learnWidth="480"
-        appmy:learnTimes="10"/>
+        appmy:learnTimes="10"
+        appmy:learnType="2"
+        appmy:learnWidth="480"/>
+
+    <TextView
+        android:id="@+id/tv_test"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="hello world"
+        android:textSize="25dp"/>
 
 </LinearLayout>
