#improve and practice DBManager, DBHelper (make them together) and AppSharedPreferences(Singleton with internal enum), AppCache(Singleton with total enum)

--- a/yueting/src/main/res/yueting/common/layout/activity_file.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_file.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.aqrlei.graduation.yueting.ui.FileActivity">
 
 
@@ -14,11 +14,9 @@
         android:layout_height="40dp"
         android:background="#ffffff"
         android:gravity="center_vertical"
+        android:ellipsize="end"
         android:maxLines="1"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/v_divider"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="12dp"
         tools:text="/dev"/>
 
     <View
@@ -26,21 +24,16 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#bbbbbb"
-        app:layout_constraintBottom_toTopOf="@+id/lv_file"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_file_parent"
         />
 
     <ListView
         android:id="@+id/lv_file"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:overScrollMode="never"
         android:scrollbars="none"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/v_divider"
+
         />
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
