--- a/yueting/src/main/res/yueting/common/layout/activity_yueting.xml
+++ b/yueting/src/main/res/yueting/common/layout/activity_yueting.xml
@@ -6,15 +6,18 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/ll_tab_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#af71ccb4"
         android:orientation="horizontal">
-
+        <!--以后替换成图-->
         <TextView
             android:id="@+id/tv_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:gravity="center"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="设置"/>
@@ -25,7 +28,6 @@
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:background="#af71ccb4"
             android:orientation="horizontal">
 
             <RadioButton
@@ -72,22 +74,35 @@
                 android:textSize="15dp"/>
 
         </RadioGroup>
-
+        <!--以后替换成图-->
         <TextView
             android:id="@+id/tv_file_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:gravity="center"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="本地"/>
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/fl_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+
+        <FrameLayout
+            android:id="@+id/fl_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom"
+            android:background="#6df98989"/>
+
+    </FrameLayout>
 
 
 </LinearLayout>
