--- a/yueting/src/main/res/yueting/music/layout/listitem_child_music.xml
+++ b/yueting/src/main/res/yueting/music/layout/listitem_child_music.xml
@@ -3,7 +3,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="90dp">
     <FrameLayout
         android:layout_margin="12dp"
         android:layout_width="64dp"
