--- a/yueting/src/main/res/layout/activity_picture.xml
+++ b/yueting/src/main/res/layout/activity_picture.xml
@@ -67,7 +67,7 @@
         yueting:capStyle="round"
         android:visibility="gone" />
 
-    <com.aqrairsigns.aqrleilib.view.FlowLayout
+    <com.aqrairsigns.aqrleilib.view.TestView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -83,8 +83,8 @@
             android:textColor="#1b8fe6"
             android:textSize="12dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <!--<TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/oval_shape"
             android:paddingBottom="5dp"
@@ -129,8 +129,8 @@
             android:paddingTop="5dp"
             android:text="write the code,change the world"
             android:textColor="#1b8fe6"
-            android:textSize="12dp"/>
-    </com.aqrairsigns.aqrleilib.view.FlowLayout>
+            android:textSize="12dp"/>-->
+    </com.aqrairsigns.aqrleilib.view.TestView>
 
 
 </RelativeLayout>
