--- a/yueting/src/main/res/yueting/common/layout/listitem_music.xml
+++ b/yueting/src/main/res/yueting/common/layout/listitem_music.xml
@@ -9,6 +9,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp">
         <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdv_music_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </FrameLayout>
