--- a/yueting/src/main/res/yueting/home/layout/yueting_fragment_home.xml
+++ b/yueting/src/main/res/yueting/home/layout/yueting_fragment_home.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:aqrlib="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <com.aqrairsigns.aqrleilib.view.AlphaListView
         android:id="@+id/lv_fragment_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
-        android:overScrollMode="never"/>
+        android:overScrollMode="never"
+        aqrlib:listMinHeight="90" />
 
 </LinearLayout>
